# trader-tip

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
src/trader_tip/: __init__.py  main.py  news_service.py
src/trader_tip/api/: __init__.py  news.py
src/trader_tip/models/: __init__.py  news.py
src/trader_tip/services/: news_service.py
tests/: __init__.py  conftest.py
